base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retreat
  labels:
    namespace: retreat
